[package]
name = "ragout_custom_events_macro"
version = "0.1.0"
edition = "2021"
description = "macro crate that implements the ragout crate custom_events feature"
license = "MIT"
repository = "https://github.com/uraneko/ragout_custom_events_macro"
readme = "README.md"
keywords = ["terminal", "raw_mode", "cli", "proc-macro"]
categories = ["command-line-interface"]
exclude = ["Cargo.lock"]
# documentation = "https://docs.rs/ragout_custom_events_macro"


[lib]
proc-macro = true

[dependencies]
crossterm = "0.28.1"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.74", features = ["full", "parsing"] }

[[example]]
name = "default"
path = "examples/default.rs"

